# LGFX_Simulator_SDL

./: .gitmodules  CMakeLists.txt  LGFX_SDL.cpp  README.md  fetch_submodules.sh  gitAcp.sh  license.txt  main.cpp  performance_window.hpp
simu_project/: simu_project.cpp  simu_project.h
simu_project/apps/: apps.h
simu_project/apps/assets/icons/: icons.h
simu_project/apps/tools/: app_generator.py
simu_project/apps/utils/system/inputs/button/: button.cpp  button.h
simu_project/apps/utils/system/ui/progress_window/: progress_window.cpp
simu_project/hal/: hal.cpp  hal.h
simu_project/hal/hal_simulator/: hal_simulator.hpp
